# tokenslim-mcp

./: README.md  pyproject.toml
src/tokenslim_mcp/: __init__.py  __main__.py  engine.py  install.py  server.py  tools.py
tests/: test_ccr_store.py  test_install.py  test_server.py  test_tools.py
