[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenslim-mcp"
version = "0.0.1"
description = "MCP server exposing the tokenslim context-compression engine (compress / retrieve / stats tools) to any MCP host."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "robertruben98" }]
keywords = ["llm", "mcp", "context", "compression", "tokens", "claude", "cursor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2",
    "tokenslim @ git+https://github.com/robertruben98/tokenslim",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
tokenslim-mcp = "tokenslim_mcp.server:main"

[project.urls]
Homepage = "https://github.com/robertruben98/tokenslim-mcp"
Repository = "https://github.com/robertruben98/tokenslim-mcp"
Issues = "https://github.com/robertruben98/tokenslim-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenslim_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
